0.85  2025-10-11
    [Feature]
    - Added tostring() helper to convert values into their JSON string form,
      matching jq's behavior for scalars, booleans, null, arrays, and objects.
    - Documented the helper across README, POD, CLI help, and regression tests.

0.84  2025-10-11
    [Feature]
    - Added to_entries(), from_entries(), and with_entries(filter) helpers to
      round out jq's entry transformation workflow for objects and arrays.
    - Documented the helpers across README, POD, CLI help, and regression tests.

0.83  2025-10-11
    [Feature]
    - Added median_by(path) helper to compute the median of numeric values
      projected from array elements, mirroring the semantics of median.
    - Documented the helper across README, POD, CLI help, and regression tests.

0.82  2025-10-11
    [Feature]
    - Added percentile(p) helper to compute linear-interpolated percentiles for
      numeric array values.
    - Documented the helper across README, POD, CLI help, and regression tests.

0.81  2025-10-11
    [Feature]
    - Added enumerate() helper to pair array elements with their zero-based
      index for downstream processing.
    - Documented the helper across README, POD, CLI help, and regression tests.
    - Added transpose() helper to pivot arrays-of-arrays from rows into
      columns, truncating to the shortest length for uneven input.

0.80  2025-10-11
    [Feature]
    - Added merge_objects() helper to flatten arrays of hashes into a single
      object using last-write-wins semantics while ignoring non-object entries.
    - Documented the helper across README, POD, CLI help, and regression tests.

0.79  2025-10-11
    [Feature]
    - Added tail(n) helper to return the last N elements from arrays while
      preserving shorter inputs unchanged.
    - Documented the helper across README, POD, CLI help, and regression tests.

0.78  2025-10-11
    [Feature]
    - Added avg_by(path) helper to compute the arithmetic mean of numeric values